[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
steam-openid = "0.2.0"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { version = "1.40.0", features = ["rt", "macros", "net", "mio"] }
tower-sessions = "0.13.0"
tower-http = { version = "0.5", features = ["fs"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
futures-util = "0.3"

diesel = { version = "2.2", features = ["serde_json"] }
diesel-async = { version = "0.5", features = ["postgres"] }
serde_json = "1.0.128"
diesel_async_migrations = { version = "0.15" }
