[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
steam-openid = "0.2.0"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { version = "1.40.0", features = ["rt", "macros", "net", "mio", "rt-multi-thread"] }
tower-sessions = "0.13.0"
tower-http = { version = "0.6", features = ["fs"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
futures-util = "0.3"

diesel = { version = "2.2", features = ["serde_json"] }
diesel-async = { version = "0.5", features = ["postgres"] }
serde_json = "1.0.128"
diesel_async_migrations = { version = "0.15" }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "json"] }

common = { path = "../common/" }
analysis = { path = "../analysis/" }

image = { version = "0.25" }
base64 = { version = "0.22" }

csdemo = { package = "csdemo", git = "https://github.com/Lol3rrr/csdemo.git", ref = "main" }
memmap2 = { version = "0.9" }
clap = { version = "4.5", features = ["derive"] }

phf = { version = "0.11", features = ["macros"] }

uuid = { version = "1.10", features = ["v7"] }
